Add some Roaster stats and features
